# rusty-cdc

./: .envrc  Cargo.toml  docker-compose.yml
infrastructure/fake-pubsub/: Dockerfile  docker-entrypoint.sh
scripts/: create-infra.sh
src/: main.rs
