[package]
name = "rusty-cdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-pubsub1 = "3.1.0+20220221"
hyper = "0.14.18"
hyper-rustls = "0.23.0"
serde = "^1.0"
serde_json = "^1.0"
tokio = { version = "1.18.2", features = ["full"] }